[package]
name = "arb-program"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
bytemuck = "1.7.2"
num-derive = "0.3.3"
num-traits = "0.2.15"
solana-program = "1.14.12"
spl-associated-token-account = "1.1.3"
spl-token = "3.5.0"
spl-token-2022 = "0.6.1"
thiserror = "1.0.40"
